# G1KI_Angebotsabgleich

./: .gitignore  README.md  app.py  compare_rag.py  main.py  pyproject.toml
